# linux-sgx

./: .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  License.txt  Makefile  Makefile.psw_dcap  Makefile.psw_tdx  README.md  buildenv.mk  debugger.diff  download_prebuilt.sh  sgx2.md
psw/ae/aesm_service/source/: CMakeLists.txt
psw/ae/aesm_service/source/aesm/application/: AEClass.h  aesm_config.cpp  aesm_config.h  aesm_logic.cpp  aesm_logic.h  aesm_proxy_type.h  aesm_rand.cpp  aesm_rand.h  event_strings.cpp  event_strings.h  main.cpp  prof_fun.h
psw/ae/aesm_service/source/aesm/extension/: aesm_ecdsa.cpp  aesm_encode.cpp  aesm_encode.h  aesm_epid_blob.cpp  aesm_epid_blob.h  aesm_http_msg.cpp  aesm_long_lived_thread.cpp  aesm_long_lived_thread.h  aesm_xegd_blob.cpp  aesm_xegd_blob.h  endpoint_select_info.cpp  endpoint_select_info.h  platform_info_facility.cpp  platform_info_logic.cpp  platform_info_logic.h  type_length_value.cpp  type_length_value.h
psw/ae/aesm_service/source/aesm_wrapper/inc/: AESMLogicWrapper.h  AESMQueue.h  AESMQueueManager.h  AESMWorkerThread.h  CAESMServer.h  CSelector.h  IAESMQueue.h  IServerSocket.h  RequestData.h  Thread.h  UnixServerSocket.h  aesm_exception.h
psw/ae/aesm_service/source/aesm_wrapper/src/: AESMLogicWrapper.cpp  AESMQueueManager.cpp  AESMWorkerThread.cpp  CAESMServer.cpp  CSelector.cpp  Thread.cpp  UnixServerSocket.cpp
psw/ae/aesm_service/source/bundles/: CMakeLists.txt
psw/ae/aesm_service/source/bundles/ecdsa_quote_service_bundle/: CMakeLists.txt  ecdsa_quote_service_bundle.cpp  manifest.json
psw/ae/aesm_service/source/bundles/epid_quote_service_bundle/: CMakeLists.txt  PVEClass.cpp  PVEClass.h  QEClass.cpp  QEClass.h  aesm_ecdsa.cpp  aesm_epid_blob.cpp  aesm_epid_blob.h  aesm_xegd_blob.cpp  aesm_xegd_blob.h  endpoint_select_info.cpp  endpoint_select_info.h  epid_endpoint_selection.cpp  epid_provision_msg1.cpp  epid_provision_msg2.cpp  epid_provision_msg4.cpp  epid_quote_service_bundle.cpp  epid_utility.cpp  epid_utility.h  manifest.json  platform_info_facility.cpp  platform_info_logic.cpp  platform_info_logic.h  prov_msg_size.h  pve_logic.cpp  pve_logic.h  pve_pub_key.cpp  qe_logic.cpp  qe_logic.h
psw/ae/aesm_service/source/bundles/le_launch_service_bundle/: CMakeLists.txt  LEClass.cpp  LEClass.h  le_launch_service_bundle.cpp  manifest.json
psw/ae/aesm_service/source/bundles/linux_network_service_bundle/: CMakeLists.txt  aesm_encode.cpp  aesm_http_msg.cpp  aesm_network.h  linux_network_service_bundle.cpp  manifest.json
psw/ae/aesm_service/source/bundles/local_pseop_service_bundle/: CMakeLists.txt  PSDAService.cpp  PSDAService.h  PSEClass.cpp  PSEClass.h  aesm_pse_status.cpp  aesm_pse_status.h  interface_psda.cpp  interface_psda.h  jhi_proxy.cpp  jhi_proxy.h  local_pseop_service_bundle.cpp  manifest.json  platform_info_facility.cpp  platform_info_logic.cpp  platform_info_logic.h  (+4 more)
psw/ae/aesm_service/source/common/: AEClass.h  AESMLogicWrapper.h  AESMQueue.h  AESMQueueManager.h  AESMWorkerThread.h  Buffer.h  CAESMServer.h  CSelector.h  IAESMQueue.h  IServerSocket.h  RequestData.h  Thread.h  UnixServerSocket.h  aesm_config.h  aesm_encode.h  aesm_exception.h  aesm_logic.h  aesm_long_lived_thread.h  aesm_proxy_type.h  aesm_quoting_type.h  aesm_rand.h  cppmicroservices_util.h  es_info.h  event_strings.h  helper.h  persistent_storage_info.h  platform_info_blob.h  prof_fun.h  ssl_compat_wrapper.h  ssl_crypto.h  type_length_value.h
psw/ae/aesm_service/source/core/: AESMLogicWrapper.cpp  AESMQueueManager.cpp  AESMWorkerThread.cpp  CAESMServer.cpp  CMakeLists.txt  CSelector.cpp  Thread.cpp  UnixServerSocket.cpp  main.cpp
psw/ae/aesm_service/source/epid_provision/: epid_endpoint_selection.cpp  epid_provision_msg1.cpp  epid_provision_msg2.cpp  epid_provision_msg4.cpp  epid_utility.cpp  epid_utility.h
psw/ae/aesm_service/source/interfaces/: epid_quote_service.h  get_att_key_id.h  launch_service.h  network_service.h  pce_service.h  pseop_service.h  psepr_service.h  quote_ex_service.h  quote_provider_service.h  quote_proxy_service.h  quote_service.h  select_att_key_id.h  service.h
psw/ae/aesm_service/source/le/: LEClass.cpp  LEClass.h
psw/ae/aesm_service/source/network/: network_encoding_wrapper.cpp  network_encoding_wrapper.h
psw/ae/aesm_service/source/oal/: CMakeLists.txt  aesm_thread.cpp  aesm_util.cpp  error_report.cpp  internal_log.cpp  oal_power.cpp
psw/ae/aesm_service/source/pce/: PCEClass.cpp  PCEClass.h
psw/ae/aesm_service/source/protobuf/: Makefile
psw/ae/aesm_service/source/pse_op/: PSDAService.cpp  PSDAService.h  PSEClass.cpp  PSEClass.h  aesm_pse_status.cpp  aesm_pse_status.h  jhi_proxy.cpp  jhi_proxy.h  pse_op_logic.cpp  pse_op_logic.h  pse_op_psda_ocall.cpp  pse_op_vmc_sqlite_ocall.cpp
psw/ae/aesm_service/source/pse_pr/: PSEPRClass.cpp  PSEPRClass.h
psw/ae/aesm_service/source/pve/: PVEClass.cpp  PVEClass.h  prov_msg_size.h  pve_logic.cpp  pve_logic.h  pve_pub_key.cpp
psw/ae/aesm_service/source/qcnl/: CMakeLists.txt
psw/ae/aesm_service/source/qe/: QEClass.cpp  QEClass.h  qe_logic.cpp  qe_logic.h
psw/ae/aesm_service/source/qpl/: CMakeLists.txt
psw/ae/aesm_service/source/ssl_wrapper/: crypto_aes_gcm.cpp  crypto_cmac128.cpp  crypto_ecc.cpp  crypto_rsa.cpp  crypto_sha256_msg.cpp  ssl_compat_wrapper.cpp  ssl_compat_wrapper.h  ssl_crypto.h
psw/ae/aesm_service/source/storage/: persistent_storage_info.h  persistent_storage_table.cpp
psw/ae/aesm_service/source/upse/: Buffer.h  helper.cpp  helper.h  interface_ocsp.cpp  interface_ocsp.h  interface_psda.cpp  interface_psda.h  platform_info_blob.h  pse_pr_inc.h  sigma_helper.cpp  sigma_helper.h  u_certificate_provisioning.cpp  u_certificate_provisioning.h  u_long_term_pairing.cpp  u_long_term_pairing.h  uecall_bridge.cpp  uecall_bridge.h  upse.cpp  upse.h  upse_iclsInit.cpp
psw/ae/aesm_service/source/utils/: CMakeLists.txt  aesm_config.cpp  aesm_long_lived_thread.cpp  aesm_rand.cpp  crypto_aes_gcm.cpp  crypto_cmac128.cpp  crypto_ecc.cpp  crypto_rsa.cpp  crypto_sha256_msg.cpp  helper.cpp  ssl_compat_wrapper.cpp  type_length_value.cpp
(+3070 files in other folders)
